# chatbi_mvp

./: .env.example  .gitignore  README.md  agent_planner.py  api_service.py  config.py  database.py  error_analyzer.py  evaluator.py  field_matcher.py  indicator_knowledge.py  indicator_retriever.py  indicators.json  indicators_full.json  join_resolver.py  llm_client.py  main.py  prompt_builder.py  pyproject.toml  query_decomposer.py  query_parser.py  report_generator.py  result_formatter.py  schema_generator.py  schema_linker.py  table_retriever.py  test_cases.json  text2sql_v0.py  text2sql_v1.py  text2sql_v2.py  vector_search_demo.py
static/: index.html
tests/: test_agent_planner.py  test_prompt_and_config.py  test_query_decomposer.py  test_report_generator.py
